syntax = "proto3";
package pb;

message PostAccountRequest {
  string name = 1;
}

message PostAccountResponse {
  string id = 1;
  string name = 2;
}

message GetAccountRequest {
  string id = 1;
}

message GetAccountResponse {
  string id = 1;
  string name = 2;
}

service Account {
  rpc PostAccount (PostAccountRequest) returns (PostAccountResponse) {}
  rpc GetAccount (GetAccountRequest) returns (GetAccountResponse) {}
}
